refactor: migrate Java/JavaFX application to TypeScript/Electron using Vite